# django-remake-migrations

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json  requirements-dev.txt  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  hacktoberfest.yml  issue-manager.yml  labels.yml  poetry-upgrade.yml  upgrader.yml
docs/: conf.py  configuration.rst  index.md  installation.md  technical-details.md  usage.md
src/django_remake_migrations/: apps.py  conf.py
src/django_remake_migrations/management/: migration_writer.py
src/django_remake_migrations/management/commands/: delete_remaked_migrations.py  remakemigrations.py
src/remake_migrations/: apps.py
src/remake_migrations/management/commands/: remakemigrations.py
tests/: settings.py  test_delete_remaked_migrations.py  test_main.py  test_more_than_initial.py  test_pgextensions_case.py  test_remakemigrations.py  test_run_before.py  test_simple_case.py  utils.py
tests/delete/app1/: apps.py  models.py
tests/delete/app2/: apps.py  models.py
tests/more_than_initial/app_a/: apps.py  models.py
tests/more_than_initial/app_b/: apps.py  models.py
tests/pgextensions/app1/: apps.py  models.py
tests/simple/app1/: apps.py  models.py
tests/simple/app2/: apps.py  models.py
tests/testapp/: models.py
tests/testapp2/: apps.py
