[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[tool.ruff]
target-version = "py39"
line-length = 88

lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "django_remake_migrations", "tests" ]

[tool.pytest.ini_options]
addopts = """\
    -v
    -Wdefault
    --cov=django_remake_migrations
    --cov-report=term-missing:skip-covered
    --cov-report=xml
    --ds=tests.settings
    """
pythonpath = [ "src" ]
django_find_project = false

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
  'docs/.*',
  'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/django_remake_migrations/__init__.py:__version__",
  "docs/conf.py:version",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.0.0",
    "pytest-cov<7.0.0,>=6.0.0",
    "pytest-django<5.0,>=4.5",
    "psycopg[binary]==3.1.18",
]
docs = [
    "myst-parser>=0.16; python_version >= \"3.11\"",
    "sphinx>=4.0; python_version >= \"3.11\"",
    "furo>=2023.5.20; python_version >= \"3.11\"",
    "sphinx-autobuild<2025.0.0,>=2024.0.0; python_version >= \"3.11\"",
]

[project]
authors = [
    {name = "Bruno Alla", email = "oss@browniebroke.com"},
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
]
name = "django-remake-migrations"
version = "2.3.0"
description = "A Django admin command to recreate all migrations in a project."
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Bug Tracker" = "https://github.com/browniebroke/django-remake-migrations/issues"
Changelog = "https://github.com/browniebroke/django-remake-migrations/blob/main/CHANGELOG.md"
repository = "https://github.com/browniebroke/django-remake-migrations"
documentation = "https://django-remake-migrations.readthedocs.io"