[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77.0.3" ]

[project]
name = "django-remake-migrations"
version = "2.10.0"
description = "A Django admin command to recreate all migrations in a project."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Bruno Alla", email = "oss@browniebroke.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "django>=4.2",
]
urls."Bug Tracker" = "https://github.com/browniebroke/django-remake-migrations/issues"
urls.Changelog = "https://github.com/browniebroke/django-remake-migrations/blob/main/CHANGELOG.md"
urls.documentation = "https://django-remake-migrations.readthedocs.io"
urls.repository = "https://github.com/browniebroke/django-remake-migrations"

[dependency-groups]
dev = [
  "coverage",
  "psycopg[binary]==3.3.2",
  "pytest>=9,<10",
  "pytest-django>=4.5,<5",
]
docs = [
  "furo>=2023.5.20; python_version>='3.11'",
  "myst-parser>=0.16; python_version>='3.11'",
  "sphinx>=4; python_version>='3.11'",
  "sphinx-autobuild>=2025,<2026; python_version>='3.11'",
]
django42 = [ "django>=4.2a1,<5" ]
django50 = [ "django>=5.0a1,<5.1" ]
django51 = [ "django>=5.1a1,<5.2" ]
django52 = [ "django>=5.2a1,<6" ]
django60 = [ "django>=6.0a1,<6.1; python_version>='3.12'" ]

[tool.uv]
conflicts = [
  [
    { group = "django60" },
    { group = "django52" },
    { group = "django51" },
    { group = "django50" },
    { group = "django42" },
  ],
]

[tool.ruff]
target-version = "py310"
line-length = 88
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "django_remake_migrations", "tests" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest]
minversion = "9.0"
addopt = ["-v", "-Wdefault", "--ds=tests.settings"]
pythonpath = [ "src" ]

[tool.coverage]
run.branch = true
run.parallel = true
run.source = [
  "django_remake_migrations",
]
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.exclude_lines = [
  "@overload",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
  "docs/.*",
  "setup.py",
]
overrides = [ { module = "tests.*", allow_untyped_defs = true }, { module = "docs.*", ignore_errors = true } ]

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/django_remake_migrations/__init__.py:__version__",
  "docs/conf.py:version",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
changelog.exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]
changelog.environment.keep_trailing_newline = true
